add user login and register
